# pan-am-api

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  seed_data.sh
panam/: asgi.py  settings.py  urls.py  wsgi.py
panamapi/fixtures/: airports.json  customers.json  flights.json  generate.py  payments.json  users.json  x.json
panamapi/models/: __init__.py  airport.py  booking.py  customer.py  flight.py  payment.py  roundtrip.py  ticket.py
panamapi/views/: __init__.py  account.py  airport.py  booking.py  csrf.py  flight.py  payment.py  register.py  ticket.py
