[tool.poetry]
name = "panam-api"
version = "0.1.0"
description = "Server for PanAm flight application"
authors = ["Eric Steedly <ericsteedly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
pylint = "^3.1.0"
pylint-django = "^2.5.5"
isort = "^5.13.2"
colorama = "^0.4.6"
autopep8 = "^2.1.0"
astroid = "^3.1.0"
lazy-object-proxy = "^1.10.0"
mccabe = "^0.7.0"
pycodestyle = "^2.11.1"
six = "^1.16.0"
gunicorn = "^22.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
